# semantle-he

./: .gitignore  .pre-commit-config.yaml  COPYING  Dockerfile  Procfile  README.md  __main__.py  app.py  config.format.yaml  crit.py  docker-compose.yml  download_model.py  handlers.py  logic.py  migrate.py  migrate_redis_to_sql.py  migrate_sql.py  model.py  new_app.py  new_handlers.py  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.txt  semantle.cfg.format  total.py
.github/workflows/: quality.yml
alembic/: env.py
alembic/versions/: 23e3fa471b40_add_user_clue_count_table.py  342c9a594f33_add_closest_1000_table.py  6777d9f1937f_fine_tune_indexes.py  734535a7c997_secret_word_table.py  8240e5d61928_user_subscription_table.py  8798f64b5f19_hot_clue_table.py  c4ee2484db71_user_user_history_tables.py  edef17c40466_add_indices.py
common/: alembic.ini  config.py  consts.py  error.py  logger.py  schemas.py  session.py  tables.py  typing.py
common/alembic/: env.py
common/alembic/versions/: 3c47bafbaab7_word2vec_word_was_secret.py  9e67a0a418e4_word2vec.py
logic/: auth_logic.py  game_logic.py  user_logic.py
mock/: mock_db.py
mocks/: hs_test_case.py  mock_db.py
research/: __init__.py  base.py  config.json  config.json.format  config.py  create_corpus.py  postprocess.py  postprocess_hebpipe.py  split_corpus.py  train_model.py
routers/: __init__.py  admin_routes.py  auth_routes.py  base.py  game_routes.py  legal_routes.py  pages_routes.py  subscription_routes.py  user_routes.py
scripts/: add_subscription.py  fix_missing_cache.py  get_day_stats.py  get_user.py  pick_random_word.py  populate.py  semantle.py  set_secret.py
static/: all_secrets.html  closest1000.html  faq.html  index.html  menu.html  semantle.js  styles.css  twemoji.min.js  videos.html
static/css/: style.css
static/js/: graph.js  semantle.js  temp.js  tsne.js
templates/: all_secrets.html  closest1000.html  error.html  faq.html  index.html  menu.html  privacy.html  set_secret.html  statistics.html  template.html.template  videos.html
tests/: test_logic.py  test_secret_logic.py
