[tool.poetry]
name = "semantle-he"
version = "0.1.0"
description = "A Hebrew version of Semantle."
authors = ["Itamar Shefi <itamarshefi@gmail.com>"]
license = "GNU v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
fastapi = "^0.105.0"
jinja2 = "^3.1.2"
motor = "^3.3.2"
numpy = "^1.26.2"
omegaconf = "^2.3.0"
pymongo = {extras = ["srv"], version = "^4.6.1"}
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.3"
gensim = "^4.3.2"
google-auth = "^2.25.2"
python-dateutil = "^2.8.2"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.14"
sqlalchemy-libsql = "^0.1.0"
dropbox = "^11.36.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
types-python-dateutil = "^2.8.19.14"
types-requests = "^2.31.0.10"
types-redis = "^4.6.0.11"
ruff = "^0.1.9"
alembic = "^1.13.1"

[tool.ruff]
fix = true
select = ["F", "I"]


[tool.ruff.lint.isort]
force-single-line = true


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "dropbox",
  "gensim.*",
  "google.oauth2",
  "google.auth.transport",
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
