[project]
name = "semantle-he"
version = "0.1.0"
description = "A Hebrew version of Semantle."
authors = [{ name = "Itamar Shefi", email = "itamarshefi@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "redis>=5.0.1,<6",
    "fastapi==0.110.0",
    "jinja2>=3.1.2,<4",
    "motor>=3.3.2,<4",
    "numpy>=1.26.2,<2",
    "omegaconf>=2.3.0,<3",
    "pymongo[srv]>=4.6.1,<5",
    "uvicorn[standard]>=0.25.0,<0.26",
    "pydantic>=2.5.3,<3",
    "gensim>=4.3.2,<5",
    "google-auth>=2.25.2,<3",
    "python-dateutil>=2.8.2,<3",
    "python-multipart>=0.0.6,<0.0.7",
    "sqlmodel>=0.0.14,<0.0.15",
    "sqlalchemy-libsql>=0.1.0,<0.2",
    "dropbox>=11.36.2,<12",
    "pyodbc>=5.1.0,<6",
    "milon>=0.0.1,<0.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.6.0,<4",
    "mypy>=1.8.0,<2",
    "types-python-dateutil>=2.8.19.14,<3",
    "types-requests>=2.31.0.10,<3",
    "types-redis>=4.6.0.11,<5",
    "ruff==0.3.4",
    "alembic>=1.13.1,<2",
    "pytest>=8.1.1,<9",
    "pytest-sugar>=1.0.0,<2",
    "tqdm>=4.67.1,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "dropbox",
  "gensim.*",
  "google.oauth2",
  "google.auth.transport",
]
ignore_missing_imports = true
